--- a/Assets/3DWaveFunctionCollapseSample/PrototypeConfig.json
+++ b/Assets/3DWaveFunctionCollapseSample/PrototypeConfig.json
@@ -10,6 +10,7 @@
             "-1",
             "1"
         ],
+        "weight": 38,
         "posX": [
             1,
             17,
@@ -72,6 +73,7 @@
             "-1",
             "1f"
         ],
+        "weight": 38,
         "posX": [
             0,
             3,
@@ -134,6 +136,7 @@
             "1",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             0,
             3,
@@ -194,6 +197,7 @@
             "1f",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             2,
             14,
@@ -254,6 +258,7 @@
             "2f",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             5,
             13,
@@ -314,6 +319,7 @@
             "-1",
             "2"
         ],
+        "weight": 39,
         "posX": [
             0,
             3,
@@ -377,6 +383,7 @@
             "2f",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             0,
             3,
@@ -437,6 +444,7 @@
             "2",
             "-1"
         ],
+        "weight": 35,
         "posX": [
             6,
             28,
@@ -496,6 +504,7 @@
             "-1",
             "3"
         ],
+        "weight": 38,
         "posX": [
             9,
             22
@@ -558,6 +567,7 @@
             "-1",
             "3f"
         ],
+        "weight": 40,
         "posX": [
             0,
             3,
@@ -622,6 +632,7 @@
             "3",
             "-1"
         ],
+        "weight": 38,
         "posX": [
             0,
             3,
@@ -684,6 +695,7 @@
             "3f",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             10,
             24
@@ -744,6 +756,7 @@
             "-1",
             "2f"
         ],
+        "weight": 38,
         "posX": [
             1,
             17,
@@ -806,6 +819,7 @@
             "-1",
             "1f"
         ],
+        "weight": 38,
         "posX": [
             0,
             3,
@@ -868,6 +882,7 @@
             "2f",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             0,
             3,
@@ -928,6 +943,7 @@
             "1f",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             6,
             28,
@@ -988,6 +1004,7 @@
             "1f",
             "1"
         ],
+        "weight": 26,
         "posX": [
             18,
             20,
@@ -1038,6 +1055,7 @@
             "-1",
             "4s"
         ],
+        "weight": 27,
         "posX": [
             1,
             17,
@@ -1089,6 +1107,7 @@
             "1",
             "1f"
         ],
+        "weight": 26,
         "posX": [
             0,
             3,
@@ -1139,6 +1158,7 @@
             "4s",
             "-1"
         ],
+        "weight": 25,
         "posX": [
             2,
             14,
@@ -1188,6 +1208,7 @@
             "4s",
             "4s"
         ],
+        "weight": 1,
         "posX": [
             18,
             20,
@@ -1252,6 +1273,7 @@
             "3",
             "3f"
         ],
+        "weight": 24,
         "posX": [],
         "negX": [
             1,
@@ -1299,6 +1321,7 @@
             "-1",
             "0"
         ],
+        "weight": 23,
         "posX": [
             9,
             22
@@ -1345,6 +1368,7 @@
             "3",
             "3f"
         ],
+        "weight": 24,
         "posX": [
             0,
             3,
@@ -1392,6 +1416,7 @@
             "0",
             "-1"
         ],
+        "weight": 21,
         "posX": [
             10,
             24
@@ -1436,6 +1461,7 @@
             "2",
             "2f"
         ],
+        "weight": 25,
         "posX": [
             18,
             20,
@@ -1485,6 +1511,7 @@
             "-1",
             "4s"
         ],
+        "weight": 27,
         "posX": [
             5,
             13,
@@ -1536,6 +1563,7 @@
             "2f",
             "2"
         ],
+        "weight": 27,
         "posX": [
             0,
             3,
@@ -1587,6 +1615,7 @@
             "4s",
             "-1"
         ],
+        "weight": 25,
         "posX": [
             6,
             28,
@@ -1636,6 +1665,7 @@
             "-1",
             "1"
         ],
+        "weight": 38,
         "posX": [
             5,
             13,
@@ -1698,6 +1728,7 @@
             "-1",
             "2"
         ],
+        "weight": 39,
         "posX": [
             0,
             3,
@@ -1761,6 +1792,7 @@
             "1",
             "-1"
         ],
+        "weight": 36,
         "posX": [
             0,
             3,
@@ -1821,6 +1853,7 @@
             "2",
             "-1"
         ],
+        "weight": 35,
         "posX": [
             2,
             14,
@@ -1880,6 +1913,7 @@
             "-1",
             "-1"
         ],
+        "weight": 84,
         "posX": [
             0,
             3,
